tests/golden/err-caret-line-abolished/expected_error.txt
error: `^index` の行形式は廃止されました
 --> ./entry.clum:1:1
  |
1 | ^index
  | ^^^^^^ 定義に直接 `^` を前置します（例: `^index: Html = ...`）。窓口からの公開は `^@.` ブロックで書きます
